...
        app:layout_constraintTop_toBottomOf="@+id/TitleLanding"
        app:layout_constraintVertical_bias="1.0"
        android:contentDescription="@string/mentions_legales"
        app:srcCompat="@drawable/footer_landing" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:backgroundTint="#F0F0F0"
        app:cardCornerRadius="30dp"
        app:layout_constraintBottom_toTopOf="@+id/landingFooterImage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TitleLanding"
        app:layout_constraintVertical_bias="0.0">

        <Button
            android:id="@+id/buttonConnect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="45dp"
            android:layout_marginVertical="5dp"
            android:backgroundTint="#F0F0F0"
...
