...
    <string name="bookTrips">Réserver des trajets</string>
    <string name="selectDepart">Sélectionnez un lieu de départ :</string>
    <string name="addContact">Ajouter aux contact</string>

    /* Connexion */

    <string name="connection">Connexion</string>
    <string name="enterId">Renseignez vos identifiants</string>
    <string name="email">E-mail</string>
    <string name="password">Mot de passe</string>
    <string name="forgotPassword">Mot de passe oublié ?</string>
    <string name="se_connecter">Se connecter 🤙</string>

...
    <string name="modify">Modifier</string>
    <string name="returnText">Retour</string>
    <string name="confirmation">Confirmation</string>
    <string name="blablaplane">BlaBlaPlane</string>
    <string name="slogans">Des vols partagés pour des aventures inoubliables</string>
    <string name="mentions_legales">Mentions légales</string>
    <string name="logout">Déconnecter</string>
    <string name="or">- OU -</string>
    <string name="title_activity_add_contact">AddContactActivity</string>
    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
...
